[package]
name = "neko_snowman_adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  "0.5.0"
rand = "0.8.0"
nalgebra = "0.20"
ncollide2d = "0.22"
benimator = "0.3.1"
bevy_asset_loader = "0.6.0"